--- a/.gitignore
+++ b/.gitignore
@@ -179,6 +179,6 @@ cython_debug/
 
 # 
 project/orchestration/output
-project/infrastructure/Arc
+project/infra/Arc
 project/docker/mlflow-prefect/mlflow
 project/deploy/model/artifacts
